--- a/txt/sts13/sts13-ntnu-core.bib
+++ b/txt/sts13/sts13-ntnu-core.bib
@@ -7,7 +7,6 @@
   organization={Association for Computational Linguistics}
 }
 
-
 @inproceedings{bar2012ukp,
   title={UKP: Computing semantic textual similarity by combining multiple content similarity measures},
   author={B{\"a}r, Daniel and Biemann, Chris and Gurevych, Iryna and Zesch, Torsten},
@@ -16,4 +15,43 @@
   year={2012},
   organization={Association for Computational Linguistics}
 }
+
+@article{Kuhn1955,
+author = {Kuhn, HW},
+journal = {Naval research logistics quarterly},
+pages = {83--97},
+title = {{The Hungarian method for the assignment problem}},
+url = {http://onlinelibrary.wiley.com/doi/10.1002/nav.3800020109/full},
+volume = {2},
+year = {1955}
+}
+@article{Levenshtein1966,
+author = {Levenshtein, VI},
+journal = {Soviet physics doklady},
+title = {{Binary codes capable of correcting deletions, insertions and reversals}},
+url = {http://adsabs.harvard.edu/abs/1966SPhD...10..707L\%E5\%AF\%86},
+year = {1966}
+}
+@article{Leacock1998,
+author = {Leacock, C and Chodorow, M},
+journal = {WordNet: An electronic lexical \ldots},
+title = {{Combining local context and WordNet similarity for word sense identification}},
+url = {http://books.google.com/books?hl=en\&lr=\&id=Rehu8OOzMIMC\&oi=fnd\&pg=PA265\&dq=Combining+local+context+and+WordNet+similarity+for+word+sense+identification.\&ots=IpmcIkYYl7\&sig=D7QjYKTTpLBgLNImEm70-7aUsUo},
+year = {1998}
+}
+@inproceedings{Cunningham,
+author = {Cunningham, H and Maynard, D and Bontcheva, K and Tablan, V},
+booktitle = {Proc. 40th Anniversary Meeting of the \ldots},
+title = {{GATE: A framework and graphical development environment for robust NLP tools and applications, 2002}},
+url = {http://scholar.google.com/scholar?hl=en\&btnG=Search\&q=intitle:GATE:+A+Framework+and+Graphical+Development+Environment+for+Robust+NLP+Tools+and+Applications\#5}
+}
+@article{Karnick2012,
+author = {Karnick, Harish and Satapathy, Shrutiranjan and Bhagwani, Sumit},
+file = {:C$\backslash$:/Users/Gleb/Documents/Mendeley Desktop//Karnick, Satapathy, Bhagwani - 2012 - sranjans Semantic Textual Similarity using Maximal Bipartite Graph Matching.pdf:pdf},
+pages = {579--585},
+title = {{sranjans: Semantic Textual Similarity using Maximal Bipartite Graph Matching}},
+url = {http://scholar.google.com/scholar?hl=en\&btnG=Search\&q=intitle:sranjans+:+Semantic+Textual+Similarity+using+Maximal+Weighted+Bipartite+Graph+Matching\#0},
+year = {2012}
+}
+
 
