added description of Takelab features to paper

--- a/txt/sts13/sts13-ntnu-core.bib
+++ b/txt/sts13/sts13-ntnu-core.bib
@@ -17,3 +17,18 @@
   organization={Association for Computational Linguistics}
 }
 
+
+@article{DeerwesterDumaisFurnas:1990,
+	Author = {Deerwester, S. and Dumais, S.T. and Furnas, G.W. and Landauer, T.K. and Harshman, R.},
+	Date-Added = {2011-09-15 21:18:59 +0200},
+	Date-Modified = {2011-09-15 21:19:22 +0200},
+	Journal = {Journal of the American society for information science},
+	Keywords = {semantic similarity, IR},
+	Number = {6},
+	Pages = {391--407},
+	Publisher = {Citeseer},
+	Title = {Indexing by latent semantic analysis},
+	Volume = {41},
+	Year = {1990}}
+
+
